[gd_scene load_steps=4 format=3 uid="uid://cuaktsuvmk412"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_rjcuj"]
[ext_resource type="Texture2D" uid="uid://dl8tx7jq87l8x" path="res://assets/enemyship.png" id="2_om6o2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ai75r"]
size = Vector2(34, 38)

[node name="enemy" type="Area2D"]
position = Vector2(31, 29)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_rjcuj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_om6o2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ai75r")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -31)
scale = Vector2(0.35, 0.325)

[node name="egun" type="Marker2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
